--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,85 @@
     <string name="app_name">katunyou</string>
     <string name="action_settings">Settings</string>
     <string name="menu_logout">Logout Account</string>
-    <string name="menu_exit">Exit App</string>
+
+    <string name="txt_title1">เพื่อน</string>
+    <string name="menu_about">About</string>
+    <string name="menu_device">Device</string>
+    <string name="menu_usb">USB Device</string>
+
+    <string name="menu_item_new">New</string>
+    <string name="menu_output">Basic Output</string>
+    <string name="menu_input">Basic Input</string>
+    <string name="menu_analog">Basic Analog</string>
+    <string name="menu_exit">Exit</string>
+
+    <string name="no_setting">Set Your Notification</string>
+    <string name="quickstart_message">Click the SUBSCRIBE TO NEWS button below to subscribe to the
+        news topic. Messages sent to the news topic will be received. The LOG TOKEN button logs the
+        InstanceID token to logcat.</string>
+    <string name="subscribe_to_news">Subscribe To News</string>
+    <string name="log_token">Log Token</string>
+
+    <string name="msg_subscribed">Subscribed to news topic</string>
+    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
+
+    <string name="button_write">Write</string>
+
+    <string name="terminal_setting_header_title">Serial Settings</string>
+    <string name="terminal_setting_header_summary"></string>
+
+    <string name="display_setting_header_title">Display Settings</string>
+    <string name="display_setting_header_summary"></string>
+
+    <string name="display_setting_title">Display Setting</string>
+
+    <string name="fontsize_title">Font size</string>
+    <string name="fontsize_summary">Select font size</string>
+
+    <string name="typeface_title">Typeface</string>
+    <string name="typeface_summary">Select typeface</string>
+
+    <string name="display_title">Display</string>
+    <string name="display_summary">Select char or dec, hex</string>
+
+    <string name="linefeedcode_setting_title">Linefeed Code Setting</string>
+    <string name="readlinefeedcode_title">Read Linefeed Code</string>
+    <string name="readlinefeedcode_summary">Select CR or LF, CR/LF</string>
+    <string name="writelinefeedcode_title">Write Linefeed Code</string>
+    <string name="writelinefeedcode_summary">Select CR or LF, CR/LF</string>
+
+    <string name="email_setting_title">Email Setting</string>
+    <string name="email_title">email</string>
+    <string name="email_summary"></string>
+
+    <string name="serial_setting_title">Serial Setting</string>
+
+    <string name="baudrate_title">Baudrate</string>
+    <string name="baudrate_summary">baud rate</string>
+
+    <string name="databits_title">Data bits</string>
+    <string name="databits_summary">Data bits</string>
+
+    <string name="parity_title">Parity check</string>
+    <string name="parity_summary">Parity check</string>
+
+    <string name="stopbits_title">Stop bit</string>
+    <string name="stopbits_summary">Stop bit</string>
+
+    <string name="flowcontrol_title">Flow control</string>
+    <string name="flowcontrol_summary">Flow control</string>
+
+    <string name="break_title">Break</string>
+    <string name="break_summary">Break</string>
+    <string name="add_list">Add</string>
+
+    <string name="no_connect">No Device Connect</string>
+    <string name="cannot_open">Cannot Open</string>
+    <string name="connected">Connected</string>
+    <string name="device_disconnect">Device Disconnect</string>
+    <string name="device_connect">Device Connected</string>
+
+    <string name="label_monitor">Arduino USB serial data monitor</string>
 </resources>
 
 
